--- a/src/components/Subtask/style.module.css
+++ b/src/components/Subtask/style.module.css
@@ -1,6 +1,7 @@
 .task {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background-color: var(--taskMenu-color);
   transition: background-color 0.5s ease;
   border-radius: 0.5em;
@@ -26,7 +27,8 @@
   opacity: 0;
   position: relative;
   cursor: pointer;
-  padding-right: 0.5em;
+  flex-shrink: 0;
+  margin: 0 0.5em;
 }
 
 .task:hover .closeBtn {
@@ -35,6 +37,6 @@
 
 @media only screen and (max-width: 600px) {
   .closeBtn {
-    opacity: 1 !important;
+    opacity: 1;
   }
 }
